--- a/sass/style.scss
+++ b/sass/style.scss
@@ -3,6 +3,7 @@
 $color-one: #222222;
 $color-two: #FED136;
 $color-three: #777777;
+$color-four: #ffffff;
 
 $font-one: droid-serif, serif;
 $font-two: montserrat, sans-serif;
@@ -36,3 +37,133 @@ p {
     color: $color-three;
     font-size: 14px;
 }
+
+// Hero
+
+.hero {
+    height: 100vh;
+    
+    .background, .overlay, .hero-content {
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        top: 0;
+        left: 0;
+    }
+    
+    .background {
+        background: url('https://images.pexels.com/photos/848618/pexels-photo-848618.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940');
+        background-size: cover;
+        filter: grayscale(.8);
+		z-index: 1;
+    }
+
+    .hero-content {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        z-index: 2;
+
+        h1 {
+            font-size: 75px;
+            color: $color-four;
+        }
+
+        h2 {
+            font-size: 40px;
+            color: $color-four;
+            font-weight: 100;
+            margin: 0;
+        }
+        
+        .hero-btn {
+            padding: 20px 80px;
+            font-weight: 18px;
+            font-family: $font-two;
+            font-weight: bold;
+            color: $color-two;
+            border: 1px solid $color-two;
+            background: transparent;
+            transition: 0.3s ease;
+            position: relative;
+            overflow: hidden;
+            z-index: 1;
+            
+            &:before {
+                content: "";
+			    height: 100%;
+			    width: 100%;
+			    background: $color-two;
+			    position: absolute;
+			    top: 0;
+			    left: -100%;
+			    transition: 0.3s ease;
+			    z-index: -1;
+            }
+
+            &:hover {
+                color: $color-four;
+                
+                &:before {
+                    left: 0;
+                }
+            }
+        }
+    }
+}
+
+// Nav
+
+nav {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    z-index: 100;
+    padding: 40px 0;
+    .container {
+        display: flex;
+    }
+}
+
+.nav-left {
+    display: flex;
+    align-items: center;
+    flex: 1;
+    
+    h2 {
+        margin: 0;
+        font-size: 22px;
+        color: $color-two;
+    }
+}
+
+.nav-right {
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+    flex: 2;
+    overflow: hidden;
+    
+    ul {
+        padding: 0;
+        margin: 0;
+    
+        li {
+            list-style: none;
+            display: inline-block;
+    
+            a {
+                text-decoration: none; 
+                color: $color-four;
+                padding: 10px 15px;
+                font-family: $font-two;
+                font-size: 14px;
+            }
+        }
+    }
+}
+
+
+
