--- a/sass/style.scss
+++ b/sass/style.scss
@@ -19,11 +19,15 @@ body {
 h1 {
     font-family: $font-two;
     font-weight: bold;
+    font-size: 40px;
 }
 
 h2 {
     font-family: $font-one;
+    font-size: 16px;
     font-style: italic;
+    margin-bottom: 80px;
+    font-weight: 100;
 }
 
 h3 {
@@ -36,6 +40,11 @@ p {
     font-family: $font-three;
     color: $color-three;
     font-size: 14px;
+    font-style: italic;
+}
+
+[class^="-section"] {
+    margin: 100px auto;
 }
 
 // Hero
@@ -73,7 +82,6 @@ p {
         h2 {
             font-size: 40px;
             color: $color-four;
-            font-weight: 100;
             margin: 0;
         }
         
@@ -165,5 +173,27 @@ nav {
     }
 }
 
+// Services
 
+.services-section {
+    text-align: center;
+    margin-top: 100px;
+    margin-bottom: 100px;
+    
+    h1 {
+        margin-bottom: 0;
+    }
 
+    h2 {
+        margin-bottom: 100px;
+    }
+
+    i {
+        color: $color-two;
+        font-size: 38px;
+        border-radius: 50%; 
+        border: 3px solid $color-two;
+        padding: 10px;
+    }
+
+}
