--- a/sass/style.scss
+++ b/sass/style.scss
@@ -4,6 +4,7 @@ $color-one: #222222;
 $color-two: #FED136;
 $color-three: #777777;
 $color-four: #ffffff;
+$color-five: #F7F7F7;
 
 $font-one: droid-serif, serif;
 $font-two: montserrat, sans-serif;
@@ -14,6 +15,7 @@ $font-three: roboto-slab, serif;
 body {
     font-size: 16px;
     color: $color-one;
+    margin: 0;
 }
 
 h1 {
@@ -43,8 +45,9 @@ p {
     font-style: italic;
 }
 
-[class^="-section"] {
-    margin: 100px auto;
+section {
+    padding: 80px 0;
+    text-align: center;
 }
 
 // Hero
@@ -52,7 +55,7 @@ p {
 .hero {
     height: 100vh;
     
-    .background, .overlay, .hero-content {
+    .background, .hero-content {
         position: absolute;
         width: 100%;
         height: 100%;
@@ -177,8 +180,6 @@ nav {
 
 .services-section {
     text-align: center;
-    margin-top: 100px;
-    margin-bottom: 100px;
     
     h1 {
         margin-bottom: 0;
@@ -197,3 +198,14 @@ nav {
     }
 
 }
+
+// Shop
+
+.shop-section {
+    background-color: $color-five;
+
+    h1 {
+        margin-bottom: 0;
+    }
+}
+
