--- a/sass/style.scss
+++ b/sass/style.scss
@@ -170,8 +170,8 @@ nav {
                 color: $color-four;
                 padding: 10px 15px;
                 font-family: $font-two;
-                font-size: 14px;
-            }
+                font-size: 14px;  
+            } 
         }
     }
 }
@@ -204,8 +204,35 @@ nav {
 .shop-section {
     background-color: $color-five;
 
+    a {
+        text-decoration: none;
+    }
+
     h1 {
         margin-bottom: 0;
     }
+
+    h3 {
+        color:#222222;
+    }
+    
+    .col-md-4 {
+        background-color: $color-four;
+        padding: 0;
+        border: 15px solid $color-five;
+    }
+
+    img {
+        width: 100%;
+        height: 350px;
+        object-fit: cover;
+        filter: grayscale(.8);
+    }
+
+
 }
+
+// Footer
+
+
 
