--- a/sass/style.scss
+++ b/sass/style.scss
@@ -170,7 +170,15 @@ nav {
                 color: $color-four;
                 padding: 10px 15px;
                 font-family: $font-two;
-                font-size: 14px;  
+                font-size: 14px;
+                background-image: linear-gradient(120deg, $color-two 0%, #FEDE72 100%);
+                background-repeat: no-repeat;
+                background-size: 100% 0.2em;
+                background-position: 0 88%;
+                transition: background-size 0.25s ease-in;
+                    &:hover {
+                    background-size: 100% 88%;
+                    }    
             } 
         }
     }
@@ -247,4 +255,7 @@ nav {
         padding: 0 10px;
     }
 }
+
+// Media queries
+
 
